@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-17T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
